# llm-apps

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml  publish.yml
agent-council/: README.md  package.json
agent-council/src/: index.ts
agent-recall/: CONTRIBUTING.md  README.md  compressor.py  episodic.py  long_term.py  memory.py  pyproject.toml  research_agent.py  short_term.py  simple_chatbot.py  test_memory.py
agent-recall/docs/: index.html
agentensemble/: README.md  package.json
agentquorum/: README.md  package.json
context-forge/: README.md  package.json
contextsmith/: README.md  package.json
contextsmith/src/: index.ts
corellm/: README.md  package.json
corellm/src/: json.ts  models.ts  stream.ts  types.ts
corellm/test/: llm-core.test.js
docs/: index.html
docs/agent-council/: index.html
docs/agent-recall/: index.html
docs/agentensemble/: index.html
docs/agentquorum/: index.html
docs/context-forge/: index.html
docs/contextsmith/: index.html
docs/json-storyteller/: index.html
docs/pipeline-explainer/: index.html
docs/sql-narrator/: index.html
docs/tool-pilot/: index.html
json-storyteller/: README.md  package.json
json-storyteller/src/: index.ts
llm-core/: README.md  package.json
llm-core/src/: complete.ts  http.ts  index.ts  providers.ts  stream.ts  types.ts
pipeline-explainer/: README.md  package.json
sql-narrator/: LICENSE  README.md  package.json  tsconfig.json
sql-narrator/src/: index.ts  (+4 more)
tool-pilot/: README.md  package.json
(+47 files in other folders)
