[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-recall"
version = "0.1.0"
description = "Drop-in persistent memory for LLM agents. Short-term, long-term, and episodic layers out of the box."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["llm", "agents", "memory", "ai", "openai", "chromadb", "vector-store"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
chroma = ["chromadb>=0.4.0"]
pinecone = ["pinecone-client>=3.0.0"]
qdrant = ["qdrant-client>=1.7.0"]
all = ["chromadb>=0.4.0", "pinecone-client>=3.0.0", "qdrant-client>=1.7.0"]
dev = ["pytest>=7.0", "black", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/yourusername/agent-recall"
Repository = "https://github.com/yourusername/agent-recall"
Issues = "https://github.com/yourusername/agent-recall/issues"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
